feat: add Kafka detection telemetry listener